--- a/animationsGif/animationsGif/Base.lproj/Main.storyboard
+++ b/animationsGif/animationsGif/Base.lproj/Main.storyboard
@@ -427,30 +427,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="night" translatesAutoresizingMaskIntoConstraints="NO" id="oRh-MI-CHt">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="night" translatesAutoresizingMaskIntoConstraints="NO" id="epX-dd-S0R">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="monkey" translatesAutoresizingMaskIntoConstraints="NO" id="slL-QR-iB7">
-                                <rect key="frame" x="67" y="418" width="240" height="128"/>
+                                <rect key="frame" x="51" y="393" width="273" height="149"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="149" id="dsL-CR-Sas"/>
+                                    <constraint firstAttribute="width" constant="273" id="pxV-cz-gbu"/>
+                                </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ILU-uL-GEm">
+                                <rect key="frame" x="16" y="20" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="pBA-Jk-sbU" firstAttribute="top" secondItem="slL-QR-iB7" secondAttribute="bottom" constant="121" id="5KY-Pl-lvi"/>
-                            <constraint firstItem="slL-QR-iB7" firstAttribute="leading" secondItem="eGo-Wi-JGl" secondAttribute="leading" constant="67" id="CK4-ew-gbJ"/>
-                            <constraint firstAttribute="trailing" secondItem="slL-QR-iB7" secondAttribute="trailing" constant="68" id="EXB-pT-axk"/>
-                            <constraint firstItem="oRh-MI-CHt" firstAttribute="top" secondItem="eGo-Wi-JGl" secondAttribute="top" id="V9k-Fy-jJC"/>
-                            <constraint firstItem="slL-QR-iB7" firstAttribute="centerX" secondItem="oRh-MI-CHt" secondAttribute="centerX" id="Z2d-jk-cKj"/>
-                            <constraint firstAttribute="trailing" secondItem="slL-QR-iB7" secondAttribute="trailing" constant="68" id="lWS-sk-Jc8"/>
-                            <constraint firstAttribute="trailing" secondItem="oRh-MI-CHt" secondAttribute="trailing" id="mRB-Yx-IUN"/>
-                            <constraint firstItem="slL-QR-iB7" firstAttribute="top" secondItem="oRh-MI-CHt" secondAttribute="bottom" constant="-249" id="rVG-7n-iIe"/>
-                            <constraint firstItem="pBA-Jk-sbU" firstAttribute="top" secondItem="oRh-MI-CHt" secondAttribute="bottom" id="s45-aY-xR8"/>
-                            <constraint firstItem="slL-QR-iB7" firstAttribute="leading" secondItem="eGo-Wi-JGl" secondAttribute="leading" constant="67" id="t7A-BT-0uJ"/>
-                            <constraint firstItem="oRh-MI-CHt" firstAttribute="leading" secondItem="eGo-Wi-JGl" secondAttribute="leading" id="vjA-7W-zNm"/>
+                            <constraint firstItem="pBA-Jk-sbU" firstAttribute="top" secondItem="epX-dd-S0R" secondAttribute="bottom" id="1pU-zF-U5s"/>
+                            <constraint firstItem="slL-QR-iB7" firstAttribute="top" secondItem="epX-dd-S0R" secondAttribute="bottom" constant="-274" id="6X4-NW-yeN"/>
+                            <constraint firstAttribute="trailing" secondItem="epX-dd-S0R" secondAttribute="trailing" id="UOg-5Z-vgF"/>
+                            <constraint firstItem="epX-dd-S0R" firstAttribute="top" secondItem="eGo-Wi-JGl" secondAttribute="top" id="cjM-j4-yRw"/>
+                            <constraint firstItem="epX-dd-S0R" firstAttribute="leading" secondItem="eGo-Wi-JGl" secondAttribute="leading" id="d3S-Bj-pnb"/>
+                            <constraint firstItem="slL-QR-iB7" firstAttribute="leading" secondItem="epX-dd-S0R" secondAttribute="trailing" constant="-324" id="gHQ-Kk-4vI"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="backgroundImage" destination="oRh-MI-CHt" id="ArA-c3-YGc"/>
+                        <outlet property="backBtn" destination="ILU-uL-GEm" id="w1a-RA-364"/>
+                        <outlet property="backgroundImage" destination="epX-dd-S0R" id="yVS-dl-bde"/>
                         <outlet property="mokeyImage" destination="slL-QR-iB7" id="b5N-pt-Or2"/>
                     </connections>
                 </viewController>
